# sbom-diff

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ci.sh  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/sbom-diff/: Cargo.toml  readme.md
crates/sbom-diff/src/: format.rs  lib.rs  main.rs  renderer.rs
crates/sbom-diff/src/renderer/: csv_format.rs  json.rs  markdown.rs  mod.rs  sarif.rs  tests.rs  text.rs
crates/sbom-diff/tests/: bench_edge_diff.rs  cli.rs  golden_fixtures.rs
crates/sbom-model/: Cargo.toml  readme.md
crates/sbom-model-cyclonedx/: Cargo.toml  readme.md
crates/sbom-model-cyclonedx/src/: lib.rs
crates/sbom-model-spdx/: Cargo.toml  readme.md
crates/sbom-model-spdx/src/: lib.rs
crates/sbom-model/src/: lib.rs  versions.rs
docs/: adapters.md  api.md  architecture.md  format-notes.md  getting-started.md  normalization.md  usage.md
tests/fixtures/: cli-license-ref.json  cli-license.json  copyleft-added-permissive-new.json  copyleft-added-permissive-old.json  cross-format-base.json  cross-format-base.spdx.json  cross-format-modified.json  cyclic-dep-new.json  cyclic-dep-old.json  ecosystem-changed-old.json  edge-change-new.json  edge-change-old.json  golden-markdown-spdx.md  golden-markdown.md  golden-new.cdx.xml  golden-new.json  golden-new.spdx  golden-new.spdx.json  golden-old.cdx.xml  golden-old.json  golden-old.spdx  golden-old.spdx.json  golden-text-spdx.txt  golden-text.txt  hash-downgrade-new.json  hash-downgrade-old.json  kind-change-new.spdx.json  kind-change-old.spdx.json  license-changed-new.json  license-changed-old.json  license-order-new.json  license-order-old.json  missing-hashes-new.json  missing-hashes-old.json  mixed-eco-new.json  mixed-eco-old.json  new.json  new.spdx  new.spdx.json  old.json  (+10 more)
