[workspace]
members = [
    "crates/sbom-model",
    "crates/sbom-model-cyclonedx",
    "crates/sbom-model-spdx",
    "crates/sbom-diff",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["cyber witchery labs"]
license = "MIT"
repository = "https://github.com/cyberwitchery/sbom-diff"
homepage = "https://github.com/cyberwitchery/sbom-diff"
documentation = "https://docs.rs/sbom-diff"
categories = ["development-tools", "command-line-utilities"]
keywords = ["sbom", "cyclonedx", "spdx", "diff"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
indexmap = { version = "2.0", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
cyclonedx-bom = "0.6"
spdx-rs = "0.5"
spdx = "0.10"
packageurl = "0.3"
sha2 = "0.10"
hex = "0.4"

[profile.release]
strip = true
lto = true
codegen-units = 1
