[package]
name = "sbom-model-cyclonedx"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/sbom-model-cyclonedx"
description = "cyclonedx adapter for sbom-model"
readme = "readme.md"

[dependencies]
sbom-model = { path = "../sbom-model", version = "0.0.4" }
cyclonedx-bom = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
packageurl = { workspace = true }