[package]
name = "sbom-model-spdx"
version = "0.0.1"
edition = "2021"
license.workspace = true
description = "spdx adapter for sbom-model"
readme = "readme.md"

[dependencies]
sbom-model = { path = "../sbom-model", version = "0.0.1" }
spdx-rs = { workspace = true }
spdx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
packageurl = { workspace = true }