[package]
name = "sbom-model-spdx"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/sbom-model-spdx"
description = "spdx adapter for sbom-model"
readme = "readme.md"

[dependencies]
sbom-model = { path = "../sbom-model", version = "0.0.5" }
spdx-rs = { workspace = true }
spdx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
packageurl = { workspace = true }
