[package]
name = "sbom-model"
version = "0.0.3"
edition = "2021"
license.workspace = true
description = "core format-agnostic sbom model and query api"
readme = "readme.md"

[dependencies]
serde = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }
packageurl = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }