[package]
name = "sbom-model"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/sbom-model"
description = "core format-agnostic sbom model and query api"
readme = "readme.md"

[dependencies]
serde = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }
packageurl = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
spdx = { workspace = true }